# anchor-tic-tac-toe

./: .env.example  .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: craco.config.js  package-lock.json  package.json  tsconfig.json
app/src/: App.css  App.tsx  index.css  index.tsx
app/src/components/: Active.scss  Alert.tsx  Button.tsx  GameBoard.tsx  GameSetup.tsx  GamesList.tsx  LoadingSpinner.tsx  Square.scss  Square.tsx  Wallet.tsx  WalletInfo.tsx
app/src/constants/: index.ts
app/src/hooks/: index.ts  useEphemeralConnection.ts  useGameActions.ts  useGameFetching.ts  useGameSubscriptions.ts  useProgramClient.ts  useTransactionSubmit.ts
app/src/types/: index.ts
app/src/utils/: pda.ts
programs/anchor-tic-tac-toe/: Cargo.toml
programs/anchor-tic-tac-toe/src/: lib.rs
tests/: tic_tac.ts
